@startuml
class UIManager<(_canvasItems:CanvasItems)> {
    + IsActive : bool <<get>> <<set>> = true
    + Update() : void
    + FixedUpdate() : void
}
class CanvasItems <<struct>> {
    + Begin : GameObject
    + Play : GameObject
    + Win : GameObject
    + Lose : GameObject
}
GameManager *-- UIManager
CanvasItems <-- UIManager
IUpdateable <|.. UIManager
@enduml
